Add Home-3 with responsive

--- a/assets/fontello-icon-webfont/css/rt-docfind-codes.css
+++ b/assets/fontello-icon-webfont/css/rt-docfind-codes.css
@@ -21,6 +21,7 @@
 .icon-down-arrow:before { content: '\e813'; } /* '' */
 .icon-tree:before { content: '\e814'; } /* '' */
 .icon-email:before { content: '\e815'; } /* '' */
+.icon-play:before { content: '\e816'; } /* '' */
 .icon-cart:before { content: '\e817'; } /* '' */
 .icon-clock:before { content: '\e818'; } /* '' */
 .icon-phone:before { content: '\e81a'; } /* '' */
