--- a/scss/layouts/__layouts-dir.scss
+++ b/scss/layouts/__layouts-dir.scss
@@ -47,5 +47,8 @@
 @import "lo-hospital";
 @import "lo-brand";
 @import "lo-hospital-city";
+@import "lo-doctor-listing";
+@import "lo-process";
+@import "lo-find-doctor";
 
 
