--- a/scss/layouts/_lo-blog.scss
+++ b/scss/layouts/_lo-blog.scss
@@ -18,5 +18,12 @@
         }
     }
 
+    &--style-2 {
+        .title-wrapper {
+            .section-title {
+                margin-bottom: 35px;
+            }
+        }
+    }
     
 }
