--- a/scss/components/_cp-filter-tab.scss
+++ b/scss/components/_cp-filter-tab.scss
@@ -42,7 +42,10 @@
     }
 
     &-style--2 {
-        margin-top: -132px;
+        margin-top: 80px;
+        @include media-only ('lg', min) {
+            margin-top: -132px;
+        }
         .searchbox-container {
             background-color: #190B61;
             border-radius: 0px 10px 10px 10px;
@@ -51,9 +54,12 @@
             padding: 32px 32px 33px 40px;
 
             .searchbox-textfield .searchbox-input {
-                width: 344px;
                 border-radius: 10px;
                 background-color: #F5F5F5;
+
+                @include media-only ('lg', min) {
+                    width: 344px;
+                }
             }
 
             .searchbox-submit .rt-searchbox-btn {
