--- a/scss/layouts/_lo-doctor-categories.scss
+++ b/scss/layouts/_lo-doctor-categories.scss
@@ -17,7 +17,11 @@
 
     &--style-2 {
         background-color: #190B61;
+        padding-bottom: 100px;
+        @include media-only ('lg', min) {
+            padding-bottom: 0;
 
+        }
         .subtitle {
             color: #B6B2C5;
         }
@@ -27,7 +31,91 @@
         }
 
         .doctor-categories-wrapper {
+            flex-wrap: wrap;
+            @include media-only ("lg", min) {
+                flex-wrap: unset;
+            }
+        }
+    }
+    &--style-3 {
+        background-color: $color-white;
+
+        .title-wrapper {
+            margin-bottom: 35px;
+        }
+
+        .doctor-categories-wrapper {
+            gap: 10px;
+        }
+
+        .see-all-categories-btn {
+            background-color: #F6F4FF;
+            border-radius: 10px;
+            border: 1px solid #E7E6EC;
+            width: 250px;
+            height: 100px;
+            color: $color-primary;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: normal;
+            position: relative;
+            z-index: 0;
+            overflow: hidden;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                background-color: $color-primary;
+                z-index: -1;
+                transform-origin: bottom left;
+                transform: rotate(-90deg);
+                @include transition;
+                border-radius: 10px;
+            }
             
+            &:hover {
+                // background-color: $color-primary;
+                color: $color-white;
+                &::before {
+                    transform: rotate(0deg);
+                }
+            }
+        }
+    }
+
+    &--style-4 {
+        background-color: $color-white;
+        // z-index: -1;
+
+        .doctor-categories-main-wrapper {
+            position: relative;
+            z-index: 1;
+        }
+
+        .rt-card {
+            background-color: $color-secondary;
+            .icon {
+                background-color: $color-white;
+            }
+
+            .item-content {
+                .arrow-icon {
+                    border-color: $color-primary;
+                    color: $color-primary;
+                }
+            }
+
+            &:hover {
+                background-color: $color-white;
+                box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.10);
+                .icon {
+                    background-color: $color-primary;
+                }
+            }
         }
     }
 }
