--- a/scss/layouts/_lo-feature.scss
+++ b/scss/layouts/_lo-feature.scss
@@ -1,5 +1,4 @@
 .feature-section {
-
     z-index: 0;
 
     .title-wrapper {
@@ -47,6 +46,66 @@
             &:nth-child(1) {
                 right: 0;
                 bottom: 0;
+            }
+        }
+    }
+
+    &--style-2 {
+        .item-img {
+            padding-left: 0;
+            position: relative;
+            z-index: 0;
+
+            .experience-shape-wrapper {
+                position: relative;
+                display: inline-block;
+                position: absolute;
+                right: 0;
+                top: 30%;
+                z-index: 2;
+                border-radius: 50%;
+                padding: 17px;
+                background-color: $color-white;
+                box-shadow: (0px 0px 50px rgba(0, 0, 0, 0.06));
+
+                .play-circle {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    background-color: $color-primary;
+                    position: absolute;
+                    z-index: 3;
+                    
+                    i {
+                        color: $color-white;
+                        margin-left: 3px;
+                    }
+                }
+            }
+
+            .splash {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                background-color: $color-white;
+                z-index: 1;
+                @include transition;
+                // opacity: 0.8 !important;
+            }
+        }
+
+        .item-content {
+
+            .subtitle {
+                color: #6347ED;
+            }
+
+            @include media-only('lg', min) {
+                padding-left: 35px;
             }
         }
     }
