--- a/scss/layouts/_lo-testimonial.scss
+++ b/scss/layouts/_lo-testimonial.scss
@@ -1,19 +1,26 @@
 
 
 .testimonial-section {
-    background-color: #FAF9FF;
     z-index: 0;
     .row {
         --bs-gutter-y: 1.875rem;
     }
-
-    &::before {
-        content: url("../images/testimonial/testimonial-bg-shape.png");
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        z-index: -1;
-    }
     
+    
+    &--style-2 {
+        background-color: #FBFBFF;
+        padding-top: 195px;
+        &::before {
+            content: url("../images/testimonial/testimonial-bg-shape.png");
+            // background-image: url("../images/testimonial/testimonial-bg-shape.png");
+            @include background-content;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+    }
 }
