--- a/scss/components/_cp-contact-form.scss
+++ b/scss/components/_cp-contact-form.scss
@@ -1,48 +1,68 @@
-
-
-
-
 .contact-form {
-    &.row {
-        --bs-gutter-y: 30px;
+    border-radius: 10px;
+    border: 1px solid #ECECEC;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+    padding: 40px;
+    @include media-only ('lg', min) {
+        padding: 54px 86px;
+    }
+
+
+
+    .form-title-wrapper {
+        margin-bottom: 23px;
+        .title {
+            line-height: 30px;
+            margin-bottom: 6px;
+        }
+        p {
+            font-weight: 500;
+            line-height: 26px;
+        }
     }
 
     .input-area {
-        background: #F1F8F8;
+        border-radius: 3px;
+        border: 1px solid #E5E5E5;
+        background: #F9F9F9;
+        // background: #F1F8F8;
         padding: 0 22px;
-        border-radius: 6px;
         gap: 8px;
+        margin-bottom: 20px;
         i {
             color: $color-primary;
             font-size: 18px;
         }
         input, textarea {
             width: 100%;
-            padding: 20px 0;
+            padding: 10px 0;
             border: none;
             background-color: transparent;
-            @extend .para-text;
+            color: #B6B2C5;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 26px; 
+
             &::placeholder {
                 color: $color-text;
+                color: #B6B2C5;
             }
         }
         textarea {
-            height: 170px;
+            height: 194px;
         }
     }
     button {
         background-color: $color-primary;
         color: $color-white;
         border: none;
-        padding: 14px 38px;
+        padding: 20px 52px;
         font-size: 16px;
         font-weight: 500;
         line-height: normal;
         border-radius: 6px;
-        i {
-            font-size: 25px;
-            margin-left: 10px;
-        }
+        margin-top: 4px;
     }
 }
 
