--- a/scss/layouts/_lo-meta-list.scss
+++ b/scss/layouts/_lo-meta-list.scss
@@ -7,4 +7,20 @@
             }
         }
     }
+
+
+    &--style-2 {
+       li {
+            color: #605982;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: normal;
+            margin-bottom: 15px;
+            i {
+                color: #605982;
+                font-size: 19px;
+                margin-right: 7px;
+            }
+       }
+    }
 }
